ShiftRep fixes

--- a/src/components/Measures/Measures.module.css
+++ b/src/components/Measures/Measures.module.css
@@ -1,10 +1,12 @@
+
+
 .container {
     background-color: var(--bgColor);
     width: 100vx;
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
     flex-direction: column;
-    /* overflow-y: scroll; */
+    /* overflow-y: auto; */
     
 
 }
@@ -25,7 +27,7 @@
     display: flex;
     flex-direction: column;
     height: max-content;
-    margin-bottom: 30rem;
+    /* margin-bottom: 30rem; */
    
     
 
@@ -131,6 +133,7 @@
     border: 1px solid;
     display: flex;
     flex-direction: row;
+    padding: 0;
     /* justify-content: center; */
     align-items: center;
 
@@ -215,10 +218,15 @@
     border: none;
     display: flex;
     width: 2rem;
+    margin: 1px;
+    margin-right: 1px;
+    padding: 0;
     height: 100%;
     font-size: 1.7rem;
+    text-align: center;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
 }
 
 .buttonFocused {
