--- a/src/components/ShiftRep/ShiftRep.module.css
+++ b/src/components/ShiftRep/ShiftRep.module.css
@@ -330,3 +330,9 @@
     margin-top: 45vh;
     
   }
+
+  .overdue{
+    display: flex;
+    height: 100%;
+    text-align: center;
+  }
